# llp

./: CMakeLists.txt  README.md  alloc.c  alloc.h  client.c  client.h  fileStruct.c  fileStruct.h  llp1.docx  llp3.docx  llp_final.rar  main.c  parser.c  parser.h  reader.c  reader.h  server.c  server.h  transport.h  xml.c  xml.h
отчеты/: llp2.docx  llp3.docx
